envoy-config.yaml
static_resources:
  listeners:
    - name: default_listener  
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: symmetric-frontend-host
                      domains:
                        - "symmetric.lisplist.com"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: symmetric-frontend-cluster
                    - name: symmetric-backend-host
                      domains:
                        - "symmetric-api.lisplist.com"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: symmetric-backend-cluster
                http_filters:
                  - name: envoy.filters.http.router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain: { filename: "/etc/letsencrypt/live/lisplist.com/fullchain.pem" }
                    private_key: { filename: "/etc/letsencrypt/live/lisplist.com/privkey.pem" }
  clusters:
    - name: symmetric-frontend-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: symmetric-frontend-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0
                      port_value: 3000
    - name: symmetric-backend-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: symmetric-backend-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0
                      port_value: 4000
